# Jetson_line

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
aln/: nature-fairness.aln
crates/microsocietyline/src/: microsoul.rs
docs/: Charting the Moral Ledger_ A Rights-Respecting Dat.md  From Scalar Rails to Social Contracts_ A Governanc.md  From Theory to Test Bench_ A Six-Phase Research Pl.md  MicroSocietyFrameBlueprint.md  token_usage_guard.md
docs/Tree-of-Life-Colonizer/: README.md
examples/: fair_colonization.rs  minimal_run.rs
jetson_line_agent/: Cargo.toml
jetson_line_agent/src/: main.rs
micro_society_sim/src/: main.rs
microsociety-line/src/: episode.rs  logging.rs
microsociety_judgement_line/: Cargo.toml
microsociety_judgement_line/src/: episode.rs  lib.rs  line.rs  model.rs  scoring.rs
policy/aln/: tol-token-policy.aln  tol-token-usage-log.aln
policy_engine/src/: token_usage_guard.rs
sovereign_core/src/: token_usage_log.rs
sovereign_defense/src/: prompt_boundary.rs
src/: deeds.rs  dynamics.rs  episode.rs  invariants.rs  judgement.rs  lib.rs  metrics.rs  model.rs
src/analysis/: qiml_predict.rs
src/engine/: Jetson_Line.np
src/ledger/: deed_event.rs
src/main/schemas/examples/: schema.jsonl  tree-schema.json
src/simulation/: policy_family.rs
