[package]
name = "jetsonline-treeoflife"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "1D Jetson-Line Tree-of-Life colonization and justice simulator under CHURCH/FEAR/POWER/TECH and biophysical load constraints."
repository = "https://example.com/jetsonline-treeoflife"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
statrs = "0.16"
