[package]
name = "microsociety_judgement_line"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "1-Dimensional biophysical-deed judgement line for MicroSociety with Rust"
repository = "https://example.com/microsociety_judgement_line"

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[workspace]
members = [
    "microsociety_judgement_line",
    "jetson_line_agent",
]
